# maxborn

./: .bumpversion.cfg  CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml  pytest.ini  setup.cfg  setup.py
src/maxborn/: commandline.py  version.py
tests/: test_cli.py  test_import.py
